--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,6 +34,7 @@ fernandoepeso.info
 	<meta name="robots" content="noindex">
   {%- endif -%}
   {{ 'style.css'  | asset_url | stylesheet_tag }}
+  {{ 'gocart.css'  | asset_url | stylesheet_tag }}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
@@ -46,6 +47,7 @@ fernandoepeso.info
   {{ 'global.js' | asset_url | script_tag }}
   {%- if template == "cart" and cart.item_count > 0 -%}
   {{ 'global-cart.js' | asset_url | script_tag }}
+  {{ 'gocart.js' | asset_url | script_tag }}
   {%- endif -%}
   {%- if template == 'product' -%}
   {{ '//cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js' | script_tag }}
@@ -54,7 +56,6 @@ fernandoepeso.info
   {%- endif -%}
   {{ content_for_header }}
 </head>
-
 <body class="template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}
              {%- if template.suffix.size > 0 -%}
              template-{{ template.suffix }}(&nbsp;
@@ -129,6 +130,8 @@ fernandoepeso.info
             {% endfor %} -->
     </div>
     <div class="cart-part">
+      {%- section 'go-cart' -%}
+      {%- include "go-cart-button" -%}
         <div id="cart">
           <div {% if template == 'cart' %}  class="active baggie hov" {% endif %} class="baggie hov">
               <a href="/cart">Cart</a>
@@ -173,4 +176,7 @@ fernandoepeso.info
 	   {% render 'ajaxify-cart' %}
      {%- endif -%}{% render 'mws_apo_init' %}
 </body>
+<script>
+  var goCart = new GoCart();
+</script>
 </html>
