--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,21 +1,13 @@
 <div id="single-product">
     <div class="product_info">
-          <form id="product-actions" action="/cart/add" method="post" enctype="multipart/form-data"
+          <form action="/cart/add" method="post" enctype="multipart/form-data"
+          id="add-to-cart-{{ product.handle }}-{{ collection.handle }}-{{ section.id }}"
               {%- if product.has_only_default_variant -%}
               class="product-simple"
               {%- elsif variants > 1 -%}
               class="product-variants"
               {%- endif -%}>
               <div id="bag">
-                  <!-- <div class="title">
-                    <div>{{ product.title }}</div>
-                    {% unless product.metafields.descriptors.subtitle == blank %}
-                      <div class="subtitle">
-                          {{ product.metafields.descriptors.subtitle }}
-                      </div>
-                    {% endunless %}
-      			      </div> -->
-                  <!-- <div id="product-price"></div> -->
                   {% if product.compare_at_price > product.price %}
                       <span class="sale">On sale</span>
                   {% else %}
@@ -40,6 +32,20 @@
                           {{ product.metafields.custom.extra }}
                       </div>
                   {% endunless %}
+                  <button
+                   type="submit"
+                   name="add"
+                   data-add-to-cart
+                   class="js-go-cart-add-to-cart"
+                   {%- unless current_variant.available -%}disabled="disabled"{%- endunless -%}>
+                  	 <span data-add-to-cart-text>
+                  	    {%- if current_variant.available -%}
+                  	        {{- 'products.product.add_to_cart' | t -}}
+                  	    {%- else -%}
+                  	        {{- 'products.product.sold_out' | t -}}
+                  	    {%- endif -%}
+	                   </span>
+                  </button> 
               </div>
           </form>
           <div class="main-information">
