--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -2,7 +2,7 @@
     <span class="js-go-cart-counter">{{- cart.item_count -}}</span>
     <div class="go-cart__mini-cart js-go-cart-mini-cart">
         <div class="go-cart-mini-cart">
-            <div class="go-cart-mini-cart__content js-go-cart-mini-cart-content"></div>
+            <div class="go-cart-mini-cart__content js-go-cart-mini-cart-content">Cart</div>
             <div class="go-cart-mini-cart__subtotal">
                 <span>Subtotal: </span>
                 <span class="go-cart-mini-cart__subtotal-price js-go-cart-mini-cart-subtotal"></span>
