--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -1,8 +1,7 @@
 <!--cart button-->
-<div class="go-cart__trigger js-go-cart-trigger">
-
-Cart
-    <span class="js-go-cart-counter">{{- cart.item_count -}}</span>
+<div class="go-cart__trigger js-go-cart-trigger cart">
+    <div class="baggie hov"></div>Cart
+    <span class="js-go-cart-counter cart-total">{{- cart.item_count -}}</span>
 
     <!--go cart mini cart-->
     <div class="go-cart__mini-cart js-go-cart-mini-cart">
