--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -1,8 +1,9 @@
 <!--cart button-->
-<div class="go-cart__trigger js-go-cart-trigger cart">
-    <div class="baggie hov"></div>Cart
+<div class="go-cart__trigger js-go-cart-trigger ">
+<div class="cart">
+    <div class="baggie hov">Cart</div>
     <span class="js-go-cart-counter cart-total">{{- cart.item_count -}}</span>
-
+</div>
     <!--go cart mini cart-->
     <div class="go-cart__mini-cart js-go-cart-mini-cart">
 
