--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -1,6 +1,6 @@
 <!--cart button-->
 <div class="go-cart__trigger js-go-cart-trigger ">
-<div class="cart">
+<div id="cart">
     <div class="baggie hov">Cart</div>
     <span class="js-go-cart-counter cart-total">{{- cart.item_count -}}</span>
 </div>
