--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -2,7 +2,7 @@
 <div class="go-cart__trigger js-go-cart-trigger ">
 <div id="cart">
     <div class="baggie hov">Cart</div>
-    <span class="js-go-cart-counter cart-total">{{- cart.item_count -}}</span>
+    <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
 </div>
     <!--go cart mini cart-->
     <div class="go-cart__mini-cart js-go-cart-mini-cart">
