--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -132,7 +132,7 @@ fernandoepeso.info
     <div class="cart-part">
       {%- section 'go-cart' -%}
       {%- include "go-cart-button" -%}
-        <div id="cart">
+        <!-- <div id="cart">
           <div {% if template == 'cart' %}  class="active baggie hov" {% endif %} class="baggie hov">
               <a href="/cart">Cart</a>
           </div>
@@ -143,7 +143,7 @@ fernandoepeso.info
                 {{- cart.item_count -}}
                 {%- endif -%}
           </div>
-        </div>
+        </div> -->
   	 </div>
      <div class="link-about-mobile"><a href="../pages/about">About</a></div>
      <div class="switch-view hov">Switch view</div>
