--- a/assets/style.css
+++ b/assets/style.css
@@ -798,7 +798,7 @@ footer{
     right: -26vw!important;
     z-index: 40!important;
     width: 100%!important;
-    border-left: 0.5px solid black!important;
+    border-left: 0.5px solid var(--black)!important;
     max-width: 25.2vw!important;
     height: 100%!important;
     color: white!important;
