--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,37 +1,8 @@
 <div id="single-product">
     <div class="product_info">
           <form action="/cart/add" method="post" enctype="multipart/form-data"
-          id="add-to-cart-{{ product.handle }}-{{ collection.handle }}-{{ section.id }}"
-              {%- if product.has_only_default_variant -%}
-              class="product-simple"
-              {%- elsif variants > 1 -%}
-              class="product-variants"
-              {%- endif -%}>
+          id="add-to-cart-{{ product.handle }}-{{ collection.handle }}-{{ section.id }}">
               <div id="bag">
-                  {% if product.compare_at_price > product.price %}
-                      <span class="sale">On sale</span>
-                  {% else %}
-                  {% endif %}
-                  {% if product.available %}
-                  {% else %}
-                  {% endif %}
-                  <div class="variations">
-                              <!-- <select id="product-select" name="id">
-                                {% for variant in product.variants %}
-                                <option value="{{ variant.id }}">CHOOSE SIZE:</option>
-                                {% endfor %}
-                              </select> -->
-                              {% if product.available %}
-                                  <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
-                              {% else %}
-                                <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
-                              {% endif %}
-                  </div>
-                  {% unless product.metafields.custom.extra == blank %}
-                    <div class="extra">
-                          {{ product.metafields.custom.extra }}
-                      </div>
-                  {% endunless %}
                   <button
                    type="submit"
                    name="add"
@@ -45,7 +16,7 @@
                   	        {{- 'products.product.sold_out' | t -}}
                   	    {%- endif -%}
 	                   </span>
-                  </button> 
+                  </button>
               </div>
           </form>
           <div class="main-information">
@@ -106,7 +77,6 @@
               {% endfor %}
               {% for media in product.media %}
               {% endfor %}
-
     <div class="extra-info">
       This item is guaranteed authentic and has been professionally cleaned.
       Recommended dry clean only
@@ -134,12 +104,12 @@
     border-left: 0.5px solid var(--black);
   }
 </style>
-<!-- {% assign variants = 0 %}
+{% assign variants = 0 %}
 {% for option in product.options %}
 {% if product.options.first != 'Title' %}
 {% assign variants = variants | plus: 1 %}
 {% endif %}
-{% endfor %} -->
+{% endfor %}
 <script>
   //PRODUCT FUNCTIONS
   var selectCallback = function(variant, selector){
