--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -49,7 +49,7 @@
         <!--go cart drawer close-->
         <div class="go-cart-drawer__header">
             <div class="go-cart-drawer__close js-go-cart-drawer-close">
-              <div id="cart">
+              <div id="cart-white">
                   <div class="baggie hov">Cart</div>
                   <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
               </div>
