--- a/assets/style.css
+++ b/assets/style.css
@@ -418,6 +418,11 @@ header{
   display: flex;
   justify-content: space-between;
 }
+#cart-white{
+  border:0.5px solid var(--white);
+  display: flex;
+  justify-content: space-between;
+}
 
 .baggie{
   width: 100%;
@@ -427,6 +432,12 @@ header{
 .baggie a{
   display: block;
   width: 100%;
+}
+#cart-white .cart-total{
+  padding: 2px;
+  width: 30px;
+  border-left:0.5px solid var(--white);
+  text-align: center;
 }
 
 #cart .cart-total{
