--- a/assets/style.css
+++ b/assets/style.css
@@ -820,11 +820,11 @@ footer{
 .go-cart__drawer {
     position: fixed;
     top: 0;
-    right: -26vw!important;
+    right: calc(25vw + 13px)!important;
     z-index: 40!important;
     width: 100%!important;
     border-left: 0.5px solid var(--black)!important;
-    max-width: 26vw!important;
+    max-width: calc(25vw + 13px)!important;
     height: 100%!important;
     color: white!important;
     background-color: var(--black)!important;
