--- a/assets/style.css
+++ b/assets/style.css
@@ -820,7 +820,7 @@ footer{
 .go-cart__drawer {
     position: fixed;
     top: 0;
-    right: calc(-25vw + 13px)!important;
+    right: calc(-25vw - 13px)!important;
     z-index: 40!important;
     width: 100%!important;
     border-left: 0.5px solid var(--black)!important;
