--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -176,4 +176,7 @@ fernandoepeso.info
 	   {% render 'ajaxify-cart' %}
      {%- endif -%}{% render 'mws_apo_init' %}
 </body>
+<script>
+  var goCart = new GoCart();
+</script>
 </html>
