--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -50,3 +50,10 @@
             <!--Empty Bag-->
             <div class="empty">YOUR CART IS CURRENTLY EMPTY</div>
       {% endif %}
+
+    <style>
+    body{
+      background-color: var(--black)!important;
+      color: var(--white)!important;
+    }
+    </style>
