--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -27,7 +27,16 @@
         </div>
         <!--end go cart modal close-->
         <!--go cart modal content-->
-        <div class="go-cart-modal__content js-go-cart-modal-content"></div>
+        <div class="go-cart-modal__content js-go-cart-modal-content">
+          <div class="info-product">
+            <div>Designer</div>
+            <div>{{ product.metafields.custom.designer }}</div>
+          </div>
+          <div class="info-product">
+            <div>Era</div>
+            <div>{{ product.metafields.custom.era }}</div>
+          </div>
+        </div>
         <div class="go-cart-modal__buttons">
 
             <a class="go-cart__button js-go-cart-modal-close">
