--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -48,45 +48,54 @@
 </div>
 <!--go cart drawer-->
 <div class="go-cart__drawer js-go-cart-drawer">
-    <div class="go-cart-drawer">
-        <!--go cart drawer close-->
-        <div class="go-cart-drawer__header">
-            <div class="go-cart-drawer__close js-go-cart-drawer-close">
-              <div id="cart-white">
-                  <div class="baggie hov">Cart</div>
-                  <div class="js-go-cart-counter cart-total">{{- cart.item_count -}}</div>
-              </div>
+
+        {% if cart.item_count > 0 %}
+        <form id="cart-wrapper" action="/cart" method="post">
+             {% for item in cart.items %}
+                  <div class="item">
+                   <div class="thumb">
+                   <img class="lazy" src="{{ item | img_url: 'thumb' }}" data-src="{{ item | img_url: 'master' }}" alt="{{ item.title | escape }}" />
+                </div>
+                <div class="info_cart">
+                              <div class="item-title">
+                                 <a class="product-title">{{ item.product.title }}</a><br>
+                                 <div> {{ item.price | money }} </div>
+                             </div>
+                            {% unless item.product.options contains 'Title' %}
+                            <!--Variations-->
+                                    <div class="item-variations">
+                                      {%- for option_title in item.product.options -%}
+                                      {{ item.variant.options[forloop.index0] }}{% unless forloop.last  %}<br> {% endunless %}
+                                      {%- endfor -%}
+                                    </div>
+
+                                      {% endunless %}
+                               <a href="/cart/change?line={{ forloop.index }}&quantity=0">x Remove</a>
+
+                         <div class="item-quantity">
+                          <span data-field="updates" class="quantity-button minus"><span>–</span></span>
+                        <input type="hidden" step="1" max="9" value="{{ item.quantity }}" name="updates[]" class="inactive quantity-field align-center">
+                        <span class="quantity-wrap"></span>
+                        <span data-field="updates" class="quantity-button plus">
+                                              <span class="addmore">+</span>
+                                              {% if cart.items.available %}
+                                              {% else %}
+                                              {% endif %}
+                                 </span>
+                                 </div>
+                   </div>
+                       </div>
+                    {% endfor %}
+
+            <div class="total">
+              <div>SHIPPING</div>
+              <div style="text-align:right">Calculated at checkout</div>
+              SUBTOTAL
+              <div style="text-align:right" class="pri">{{ cart.total_price | money }}</div>
+              <input id="update-cart" type="submit" name="update" value="Update cart" style="display: none" />
+              <button id="checkout" type="submit" name="checkout">PROCEED TO CHECKOUT</button>
             </div>
-        </div>
-        <!--go cart drawer content-->
-        <div class="go-cart-drawer__content js-go-cart-drawer-content">
-          <div class="info-product">
-            <div>Designer</div>
-            <div>{{ product.metafields.custom.designer }}</div>
-          </div>
-          <div class="info-product">
-            <div>Era</div>
-            <div>{{ product.metafields.custom.era }}</div>
-          </div>
-        </div>
-        <!--go cart drawer subtotal-->
-        <div class="go-cart-drawer__subtotal">
-            <span>Subtotal: </span>
-            <span class="go-cart-drawer__subtotal-price js-go-cart-drawer-subtotal"></span>
-        </div>
-        <!--end go cart drawer subtotal-->
-
-        <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
-            <a href="/checkout/" class="go-cart__button">
-                Proceed to checkout
-            </a>
-
-            <a href="/cart/" class="go-cart__button">
-                View cart
-            </a>
-        </div>
-        <!--end go cart drawer buttons-->
-    </div>
+        </form>
 </div>
 <div class="go-cart__overlay js-go-cart-overlay">
 </div>
