--- a/assets/style.css
+++ b/assets/style.css
@@ -462,6 +462,40 @@ header{
   text-align: center;
 }
 
+.go-cart-item__quantity {
+    position: relative!important;;
+    bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.go-cart-item__info {
+    max-width: 0px!important;;
+    line-height:auto!important;;
+    padding: 0px!important;;
+}
+.go-cart-item__image {
+    width: 100!important;;
+    height: 216px!important;;
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: no-repeat;
+}
+.go-cart-item__info-wrapper {
+    position: relative;
+    display: grid!important;;
+}
+.go-cart-drawer__content {
+    height: calc(100% - 280px);
+    overflow: hidden;
+    overflow-y: scroll;
+    padding: 0!important;
+}
+
+
+
+
+
 .product{
   height: fit-content;
   position:relative;
