--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -67,6 +67,15 @@
             <div class="empty">YOUR CART IS CURRENTLY EMPTY</div>
       {% endif %}
 
-    <style>
-
-    </style>
+<style>
+    .main-information {
+        border-top: 0.5px solid var(--black);
+        border-right: 0.5px solid var(--black)t;
+        border-left: 0.5px solid var(--black);
+        row-gap: 0px!important;
+        grid-template-columns: repeat(1,1fr);
+        display: grid;
+        grid-gap: 12px;
+        grid-column: span 6;
+    }
+</style>
