--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -41,7 +41,7 @@
                       </div>
                   </div>
             </div>
-                <a href="/cart/change?line={{ forloop.index }}&quantity=0">x Remove</a>
+                <!-- <a href="/cart/change?line={{ forloop.index }}&quantity=0">x Remove</a> -->
             </div>
           </div>
         {% endfor %}
