--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -70,4 +70,12 @@
         grid-gap: 12px;
         grid-column: span 6;
     }
+    .info-product {
+    border-bottom: 0.5px solid var(--black);
+    grid-column: span 1;
+    row-gap: 0px!important;
+    grid-template-columns: repeat(4,1fr);
+    display: grid;
+    grid-gap: 12px;
+}
 </style>
