--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -46,10 +46,16 @@
           </div>
         {% endfor %}
           <div class="total">
-            <div>SHIPPING</div>
-            <div style="text-align:right">Calculated at checkout</div>
-            SUBTOTAL
-            <div style="text-align:right" class="pri">{{ cart.total_price | money }}</div>
+            <div class="main-information">
+              <div class="info-product">
+                <div>SUBTOTAL</div>
+                <div>{{ cart.total_price | money }}</div>
+              </div>
+              <div class="info-product">
+                <div>SHIPPING</div>
+                <div>Calculated at checkout</div>
+              </div>
+            </div>
             <input id="update-cart" type="submit" name="update" value="Update cart" style="display: none" />
             <button id="checkout" type="submit" name="checkout">PROCEED TO CHECKOUT</button>
           </div>
