--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -56,6 +56,7 @@
                 <div>Calculated at checkout</div>
               </div>
             </div>
+            <div class="link active hov">
             <input id="update-cart" type="submit" name="update" value="Update cart" style="display: none" />
             <button id="checkout" type="submit" name="checkout">PROCEED TO CHECKOUT</button>
           </div>
