--- a/assets/style.css
+++ b/assets/style.css
@@ -917,7 +917,8 @@ footer{
 #checkout{
   grid-column:span 2;
   width:100%;
-  background:#5FB307;
+  background:var(--black);
+  padding: 2px;
 }
 .quantity-button{
 width: 50%;
