--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -56,10 +56,11 @@
                 <div>Calculated at checkout</div>
               </div>
             </div>
-            <div class="link active hov">
+            <div class="active">
             <input id="update-cart" type="submit" name="update" value="Update cart" style="display: none" />
             <button id="checkout" type="submit" name="checkout">PROCEED TO CHECKOUT</button>
           </div>
+        </div>
       </form>
       {% else %}
             <!--Empty Bag-->
