--- a/assets/style.css
+++ b/assets/style.css
@@ -910,6 +910,7 @@ footer{
     grid-column: span 6;
     grid-template-columns: repeat(6,1fr);
     height: fit-content;
+    grid-gap: 12px;
 }
 .item-title{
     grid-column:span 3;
