--- a/assets/style.css
+++ b/assets/style.css
@@ -1060,7 +1060,27 @@ div#related {
   grid-column: span 12;
 }
 .page_title, .page_content {
+  grid-column: span 12;
+}
+
+
+.thumb {
+    grid-column: span 4;
+}
+.item {
     grid-column: span 12;
+    grid-gap: 12px;
+    grid-template-columns: repeat(12,1fr);
+    display: grid;
+}
+.total {
+    position: sticky;
+    top: 100px;
+    grid-column: 5/span 8;
+    background: #FAF8F6;
+    height: fit-content;
+    grid-template-columns: repeat(2,1fr);
+    display: grid;
 }
 }
 /*BIGGER DESKTOP*/
