--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -13,7 +13,16 @@
                   {% else %}
                   {% endif %}
 
-        
+                  <div class="variations">
+                              <select id="product-select" name="id">
+
+                              </select>
+                              {% if product.available %}
+                                  <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
+                              {% else %}
+                                <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">SOLD OUT</button></div>
+                              {% endif %}
+                  </div>
                   <button
                type="submit"
                name="add"
