--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -17,7 +17,9 @@
                   {% endif %}
                   <div class="variations">
                               <select id="product-select" name="id">
-
+                                {% for variant in product.variants %}
+                                <option value="{{ variant.id }}">CHOOSE SIZE:</option>
+                                {% endfor %}
                               </select>
                               {% if product.available %}
                                   <div class="addtocart hov"><button id="produ" {% unless product.available %}disabled{% endunless %} type="submit" name="add">ADD TO CART</button></div>
