--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -12,7 +12,7 @@
                   <div class="variations">
                               <select id="product-select" name="id">
                                 {% for variant in product.variants %}
-
+                                <option value="{{ variant.id }}">CHOOSE SIZE:</option>
                                 {% endfor %}
                               </select>
                               {% if product.available %}
